feat: Update salary slip and attendance components to enhance data representation; refactor salary calculation logic for improved clarity and accuracy in salary processing.